# camera

./: .gitignore  camera.py  coral_cam.py  kamera.py  kamera2.py  kamera3.py  kamera4.py  kamera5.py  pyproject.toml
src/: camera.py  camera_control.py  control.py  coords_recv.py  display.py  frame_grabber.py  gps.py  inference.py  mpu.py  tracker.py
