[project]
name = "camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.5.0",
    "mpu9250-jmdev>=1.0.12",
    "pynmeagps>=1.0.54",
    "requests>=2.32.5",
    "serial>=0.0.97",
    "ultralytics>=8.3.203",
    "websockets>=15.0.1",
]
